# janet-hs

./: .gitignore  CHANGELOG.md  README.md  flake.nix  fourmolu.yaml  generate-bindings.sh  janet-headers.nix  janet-hs.cabal  repro-bindings-failure.sh  shell.nix
janet-ffi/: LICENSE  generate-bindings.sh  janet-ffi.cabal
janet-ffi/include/: janet.h
janet-hs/: janet-hs.cabal
janet-hs/exe/: Main.hs
janet-hs/lib/Janet/: Monad.hs
lib/: Janet.hs
lib/Janet/: Internal.hs
