cabal-version:   3.0
name:            janet-hs
version:         0.1.0.0
synopsis:        Lib for embedding janet-lang into haskell applications
license:         MIT
license-file:    LICENSE
author:          Chandler Barlow
maintainer:      chandlerbrlw@gmail.com
build-type:      Simple

common warnings
  ghc-options: -Wall

common opts
  default-language: GHC2021

library
  import:
    warnings,
    opts

  exposed-modules:
    Janet
    Janet.Monad

  build-depends:
    , base
    , hs-bindgen-runtime
    , janet-ffi
    , text
  hs-source-dirs:  lib

executable janet-demo
  import:
    warnings,
    opts

  main-is:        Main.hs
  hs-source-dirs: exe

  build-depends:
    , base
    , janet-hs
